# haas-connect

./: .gitignore  ARCHITECTURE.md  MIGRATION.md  PORTABLE_BUILD.md  PRODUCTION_INSTALL.md  START  index.html  machines.json  package-lock.json  package.json  vite.config.ts
scripts/: build-installer.ps1  build-portable.ps1
src/: api.ts  config-state.ts  main.ts  state.ts  style.css  translations.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: availability.rs  browser.rs  commands.rs  config.rs  lib.rs  main.rs  models.rs  path_guard.rs  preview.rs  send.rs
src/components/: app-settings.ts  file-browser.ts  machine-list.ts  machine-settings.ts  preview-pane.ts  status-bar.ts
src/types/: index.ts
