[package]
name = "haas-cnc-connect"
version = "0.1.4"
edition = "2021"

[lib]
name = "haas_cnc_connect"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "fs", "macros"] }

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile entire crate as one unit (slower compile, smaller binary)
lto = true        # Link-time optimisation
opt-level = "s"   # Optimise for size
strip = true      # Automatically strip symbols from the binary
